# UnifiedKeyboardCombo

./: .gitignore  CMakeLists.txt  README.md  keymap.txt  prekey.txt
CMakeModules/: FindEvdev.cmake
cli/: CMakeLists.txt  ukc_cli.cpp
core/: AllMatcher.hpp  CMakeLists.txt  CommonWild.hpp  DeviceMatcher.cpp  DeviceMatcher.hpp  GlobalInit.cpp  GlobalInit.hpp  KeyMap.cpp  KeyMap.hpp  MainLoop.cpp  MainLoop.hpp  MultiMatcher.cpp  MultiMatcher.hpp  NotMatcher.cpp  NotMatcher.hpp  PlatformDef.hpp  PlatformInc.hpp  Profile.cpp  Profile.hpp  StringType.hpp  TreeType.hpp  Utility.cpp  Utility.hpp
core/linux/: CMakeLists.txt  EvdevInputDevice.cpp  EvdevInputDevice.hpp  EvdevMatcher.cpp  EvdevMatcher.hpp  HubPortMatcher.cpp  HubPortMatcher.hpp  KeyMap.cpp  MainLoop.cpp  MainLoop.hpp  UinputKeyboard.cpp  UinputKeyboard.hpp  VidPidMatcher.cpp  VidPidMatcher.hpp
core/win32/: CMakeLists.txt  KeyMap.cpp  RawInputDevice.cpp  RawInputDevice.hpp
executable/: CMakeLists.txt  test_daemon.cpp
libevdev/: CMakeLists.txt  event-names.h  libevdev-int.h  libevdev-names.c  libevdev-strip.c  libevdev-strip.h  libevdev-util.h
test/: CMakeLists.txt  test_evdev_matcher.cpp  test_evdev_uinput.cpp  test_hub_port_matcher.cpp  test_json_write.cpp  test_multi_matcher.cpp  test_scan.cpp  test_utility.cpp  test_vid_pid_matcher.cpp  test_write_test_json.cpp
win32/: BitnessHelper.cpp  CMakeLists.txt  HookDll.cpp  HookDll.h  HookMain.cpp  HookMain.h  Resource.h  ToKeyMap.cpp  WatchConfigFileChange.cpp  WatchConfigFileChange.h
